--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "redux-thunk": "^2.4.2",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.20"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
