--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
+    "framer-motion": "^10.15.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "redux-thunk": "^2.4.2",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.20"
+    "sweetalert2": "^11.7.20",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
