--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
