--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.1.0",
     "framer-motion": "^10.15.1",
     "localforage": "^1.10.0",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
