--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^9.1.3",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.20",
     "swiper": "^10.1.0"
