--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.1.2",
+    "@stripe/stripe-js": "^2.1.0",
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "emailjs-com": "^3.2.0",
@@ -45,6 +47,7 @@
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0",
+    "stripe": "^13.3.0",
     "sweetalert2": "^11.7.20",
     "swiper": "^10.2.0"
   },
