--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next-http-backend": "^2.2.1",
     "i18next-xhr-backend": "^3.2.2",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "lottie-react-web": "^2.2.2",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
