--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-router-dom": "^6.14.2",
     "react-scroll-to-bottom": "^4.2.0",
     "react-tabs": "^6.0.2",
+    "react-to-pdf": "^1.0.1",
+    "react-to-print": "^2.14.13",
     "react-toastify": "^9.1.3",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.2",
