--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.1.0",
     "@tanstack/react-query": "^4.32.6",
+    "@testing-library/react": "^14.0.0",
     "axios": "^1.4.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.1.0",
@@ -56,6 +57,7 @@
     "swiper": "^10.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -67,6 +69,7 @@
     "jest": "^29.6.4",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.4"
   }
 }
