--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.14.13",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0",
