--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.45.4",
     "react-i18next": "^13.1.2",
     "react-icons": "^4.10.1",
+    "react-id-swiper": "^4.0.0",
     "react-intersection-observer": "^9.5.2",
     "react-loader-spinner": "^5.3.4",
     "react-multi-carousel": "^2.8.4",
